# LoRaPeerLink

./: .gitignore  CMakeLists.txt  CROSS_VALIDATION.md  CmakeLists.txt  ENCRYPTION_REPORT.md  INTERFACE_USAGE.md  Makefile  PEER_MESSENGER_SUMMARY.md  PLATFORMIO_USAGE.md  README.md  SEPARATION_SUMMARY.md  TEST_SUMMARY.md  basic_example  encryption_test  export_library.sh  library.json  library.properties  peer_messaging_example  platformio.ini  validate_encryption.py
.github/workflows/: tests.yml
data/: nfc_database.csv  test_uuids.csv
examples/: basic_communication.cpp  encryption_example.cpp  peer_messaging_example.cpp
examples/esp32_platformio/: README.md  SEPARATE_REPO_GUIDE.md  platformio.ini
examples/esp32_platformio/include/: AesHandler.hpp  LoraHandler.h  ScreenHandler.h
examples/esp32_platformio/lib/LoRaPeerLink/: IRadio.h  LoraBasicLink.h  RollCall.h  library.json
examples/esp32_platformio/lib/LoRaPeerLink/src/: LoraBasicLink.cpp  SemtechRadio.cpp
examples/esp32_platformio/src/: main.cpp
include/: AesHandler.hpp  EncryptedLoRaLink.h  ILoRaLink.h  LoRaMessenger.h  LogBundler.hpp  LoraBackoffLink.h  LoraBasicLink.h  LoraHandler.h  PeerMessenger.h  RollCall.h  ScreenHandler.h
lib/lora_peer_link/: library.json
lib/lora_peer_link/include/: EncryptedLoRaLink.h  ILoRaLink.h  IRadio.h  LoraBackoffLink.h  LoraBasicLink.h  LoraSimpleLink.h  RollCall.h  SemtechRadio.h
lib/lora_peer_link/src/: LoraBackoffLink.cpp  LoraBasicLink.cpp  LoraSimpleLink.cpp  RollCall.cpp  SemtechRadio.cpp
lib/lora_simple_net/: IRadio.h  LoraSimpleLink.h  SemtechRadio.h
src/: EncryptedLoRaLink.cpp  LoRaMessenger.cpp  LoraBackoffLink.cpp  LoraBasicLink.cpp  PeerMessenger.cpp  RollCall.cpp  ScreenHandler.cpp  SemtechRadio.cpp  main.cpp
tests/: MockRadio.h  TestUtils.cpp  TestUtils.h  encryption_cli_tool.cpp  test_backoff_link.cpp  test_backoff_packet_framing.cpp  test_crc.cpp  test_encrypted_link.cpp  test_encryption_debug.cpp  test_interface.cpp  test_mock_radio.cpp  test_packet_framing.cpp  test_peer_messenger.cpp  test_rollcall.cpp  test_rollcall_debug.cpp  test_simple_link.cpp  test_timeout_propagation.cpp
